# NYC-Road-Safety-Analytics

./: .dockerignore  .gitignore  README.md  docker-compose.yml
ingest/: .dockerignore  Dockerfile  Makefile  README.md  config.py  ingest.py  ingest_nyc_bike_route_data.py  ingest_nyc_crash_data.py  ingest_nyc_district_grid_data.py  ingest_nyc_moving_violation_data.py  ingest_nyc_salt_usage_data.py  ingest_nyc_speed_hump_data.py  ingest_nyc_speed_limits_data.py  ingest_nyc_street_rating_data.py  ingest_nyc_weather_data.py  ingest_nyc_zone_map_data.py  pyproject.toml  requirements.txt  sources.yml
ingest/dagster/: README.md  dagster.yaml  pyproject.toml  workspace.yaml
ingest/dagster/ingest_coordination_dagster/: __init__.py  assets.py  definitions.py  resources.py  schedules.py
ingest/db/: nyc_data.py  weather_data.py
ingest/ingest_scripts/: ingest_nyc_bike_route_data.py  ingest_nyc_crash_data.py  ingest_nyc_district_grid_data.py  ingest_nyc_moving_violation_data.py  ingest_nyc_salt_usage_data.py  ingest_nyc_speed_hump_data.py  ingest_nyc_speed_limits_data.py  ingest_nyc_street_rating_data.py  ingest_nyc_traffic_volume_cnt_data.py  ingest_nyc_weather_data.py  ingest_nyc_zone_map_data.py  poc_bulk_insert.py
ingest/job-orchestrator/: README.md  pyproject.toml  setup.py  workspace.yaml
ingest/job-orchestrator/.dg/: telemetry.yaml
ingest/shared/: config.py  db.py  helper.py  types.py
ingest/tests/: conftest.py
ingest/tests/v1/shared/: r_test_db.py  (+2 more)
ingest/transform/: .user.yml  README.md  dbt_project.yml  profiles.yml
ingest/transform/macros/: geojson.sql
(+126 files in other folders)
